--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,14 @@
   font-weight: 300;
   src: url("./fonts/lato-v23-latin-300.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("./fonts/lato-v23-latin-300.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("./fonts/lato-v23-latin-300.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("./fonts/lato-v23-latin-300.woff") format("woff"),
+    url("./fonts/lato-v23-latin-300.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/lato-v23-latin-300.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/lato-v23-latin-300.woff")
+      format("woff"),
     /* Modern Browsers */ url("./fonts/lato-v23-latin-300.ttf")
       format("truetype"),
-    /* Safari, Android, iOS */
-      url("./fonts/lato-v23-latin-300.svg#Lato") format("svg"); /* Legacy iOS */
+    /* Safari, Android, iOS */ url("./fonts/lato-v23-latin-300.svg#Lato")
+      format("svg"); /* Legacy iOS */
 }
 /* lato-regular - latin */
 @font-face {
@@ -23,16 +21,14 @@
   font-weight: 400;
   src: url("./fonts/lato-v23-latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("./fonts/lato-v23-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("./fonts/lato-v23-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("./fonts/lato-v23-latin-regular.woff") format("woff"),
+    url("./fonts/lato-v23-latin-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/lato-v23-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/lato-v23-latin-regular.woff")
+      format("woff"),
     /* Modern Browsers */ url("./fonts/lato-v23-latin-regular.ttf")
       format("truetype"),
-    /* Safari, Android, iOS */
-      url("./fonts/lato-v23-latin-regular.svg#Lato") format("svg"); /* Legacy iOS */
+    /* Safari, Android, iOS */ url("./fonts/lato-v23-latin-regular.svg#Lato")
+      format("svg"); /* Legacy iOS */
 }
 /* lato-700 - latin */
 @font-face {
@@ -41,16 +37,14 @@
   font-weight: 700;
   src: url("./fonts/lato-v23-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("./fonts/lato-v23-latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("./fonts/lato-v23-latin-700.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("./fonts/lato-v23-latin-700.woff") format("woff"),
+    url("./fonts/lato-v23-latin-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/lato-v23-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/lato-v23-latin-700.woff")
+      format("woff"),
     /* Modern Browsers */ url("./fonts/lato-v23-latin-700.ttf")
       format("truetype"),
-    /* Safari, Android, iOS */
-      url("./fonts/lato-v23-latin-700.svg#Lato") format("svg"); /* Legacy iOS */
+    /* Safari, Android, iOS */ url("./fonts/lato-v23-latin-700.svg#Lato")
+      format("svg"); /* Legacy iOS */
 }
 *,
 *::after,
@@ -64,8 +58,8 @@ html {
   line-height: 150%;
   color: #636060;
 }
-html{
-  scroll-behavior:smooth
+html {
+  scroll-behavior: smooth;
 }
 body,
 h1,
@@ -82,7 +76,7 @@ li {
 li {
   list-style-type: none;
 }
-nav{
+nav {
   padding: 0;
   margin: 0;
 }
@@ -94,7 +88,7 @@ img {
   max-width: 100%;
   display: block;
 }
-h2{
+h2 {
   text-align: center;
   font-size: 1.5em;
   margin-bottom: 0.8rem;
@@ -129,19 +123,19 @@ footer {
 .header__nav-item {
   margin-right: 2rem;
 }
-.header__nav-item:last-child{
+.header__nav-item:last-child {
   margin-right: 0;
 }
 .header__nav-link {
-  text-transform: uppercase;  
+  text-transform: uppercase;
   font-weight: 600;
-  transition: .3s;
+  transition: 0.3s;
   cursor: pointer;
 }
-.header__nav-item:hover{
+.header__nav-item:hover {
   color: #e06733;
   transform: scale(1.2);
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 .header__close,
 .header__btn {
@@ -149,8 +143,7 @@ footer {
 }
 /* Main info section */
 .main__info {
-  padding: 2em; 
-
+  padding: 2em;
 }
 
 .main__info-wrapper {
@@ -161,7 +154,7 @@ footer {
 .profile_foto {
   max-width: 27%;
 }
-.main__info-descr{
+.main__info-descr {
   text-align: center;
 }
 .main__info-name {
@@ -171,12 +164,11 @@ footer {
   margin-bottom: 2rem;
   position: relative;
 }
-.main__info-name span{
+.main__info-name span {
   font-weight: 700;
-  
 }
-.main__info-name::after{
-  content: '';
+.main__info-name::after {
+  content: "";
   position: absolute;
   width: 100%;
   height: 2px;
@@ -187,29 +179,27 @@ footer {
 .main__info-vacant {
   font-size: 1.5em;
 }
-.inner{
+.inner {
   display: grid;
   grid-template-columns: 35% 65%;
   gap: 1rem;
 }
 /* Aside Contacts */
 
-
 .contacts__wrapper,
 .about__wrapper,
 .skills__wrapper,
+.education__wrapper,
 .language__wrapper,
 .employment__wrapper,
 .interests__wrapper,
 .projects__wrapper,
 .footer__wrapper {
-  
   margin-right: 1rem;
   margin-left: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 
 .contacts__item,
 .skills__item,
@@ -218,8 +208,8 @@ footer {
 .interests__item,
 .projects__item {
   position: relative;
-  padding-left: 1.5rem;  
-  cursor: pointer;  
+  padding-left: 1.5rem;
+  cursor: pointer;
 }
 
 .contacts__item::after,
@@ -227,9 +217,9 @@ footer {
 .education__item::after,
 .language__item::after,
 .interests__item::after,
-.projects__item::after{
+.projects__item::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 1rem;
   height: 1rem;
   top: 0.375rem;
@@ -239,7 +229,7 @@ footer {
   background-size: contain;
 }
 .adress::after {
-  background-image: url(..//icons/location.png);  
+  background-image: url(..//icons/location.png);
 }
 .e-mail::after {
   background-image: url(..//icons/mail.png);
@@ -253,9 +243,9 @@ footer {
 .tel::after {
   background-image: url(..//icons/phone-call.png);
 }
-.contacts__item::after:hover{
+.contacts__item::after:hover {
   transform: scale(1.2);
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .html::after {
@@ -271,10 +261,10 @@ footer {
   background-image: url(../icons/script.png);
 }
 .education__item::after,
-.projects__item::after{
+.projects__item::after {
   background-image: url(../icons/arrow-right.png);
 }
-.language__item::after{
+.language__item::after {
   background-image: url(../icons/language.png);
 }
 
@@ -302,60 +292,188 @@ footer {
   padding-bottom: 1rem;
   padding-top: 1rem;
 }
-.footer__author{
+.footer__author {
   position: relative;
   padding-left: 2rem;
 }
-.footer__author::before{
+.footer__author::before {
   position: absolute;
   top: 0;
   left: 0;
   width: 1.5rem;
   height: 1.5rem;
-  content: '';
-  background-image: url(../icons/github-mark-white.png);  
+  content: "";
+  background-image: url(../icons/github-mark-white.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
 }
-@media  (max-width: 1140px){
-  .container{
+@media (max-width: 1140px) {
+  .container {
     max-width: 1100px;
     padding-left: 60px;
     padding-right: 60px;
   }
 }
-@media  (max-width: 1045px){
+@media (max-width: 1045px) {
   .container {
     max-width: 1100px;
     padding-left: 30px;
     padding-right: 30px;
+  }
 }
-}
-@media  (max-width: 980px){
-  body, html{
+@media (max-width: 980px) {
+  body,
+  html {
     font-size: 90%;
   }
 }
-@media (max-width: 860px){
-  .header__nav-item{
+@media (max-width: 860px) {
+  .header__nav-item {
     margin-right: 1rem;
   }
 }
-@media (max-width: 815px){
-  aside{
+@media (max-width: 815px) {
+  aside {
     font-size: 75%;
   }
 }
-@media (max-width: 760px){
-  .container{
+@media (max-width: 760px) {
+  .container {
     padding-left: 25px;
     padding-right: 25px;
   }
-  .main__info-wrapper{
+  .main__info-wrapper {
     flex-direction: column;
   }
-  .profile_foto{
+  section {
+    font-size: 80%;
+  }
+  .main__info-descr {
+    font-size: 80%;
+  }
+  .profile_foto {
     margin-bottom: 1rem;
   }
+  .header__nav-item {
+    font-size: 80%;
+    margin-right: 1rem;
+  }
+}
+@media (max-width: 678px) {
+  .inner {
+    grid-template-columns: 40% 60%;
+  }
+}
+@media (max-width: 620px) {
+  .inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .about {
+    order: -1;
+    grid-column: span 2;
+  }
+  .education {
+    order: -1;
+    grid-column: span 2;
+  }
+  .employment {
+    order: -1;
+    grid-column: span 2;
+  }
+  .contacts {
+    order: 1;
+    grid-column: span 2;
+  }
+  header .container {
+    position: relative;
+    height: 3rem;
+    background-color: rgb(49, 65, 109);
+  }
+  .header__btn {
+    display: inline-block;
+    width: 2rem;
+    height: 2.1rem;
+    cursor: pointer;
+    border: none;
+    padding: 0;
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
+  }
+  .header__btn::after,
+  .header__btn::before {
+    content: "";
+    position: absolute;
+    width: 2rem;
+    right: 0;
+    height: 0.2rem;
+    border-radius: 0.1rem;
+    background-color: #fff;
+  }
+  .header__btn::after {
+    bottom: 0.25rem;
+  }
+  .header__btn::before {
+    top: 0.25rem;
+  }
+  .header__btn span {
+    display: block;
+    height: 0.2rem;
+    border-radius: 0.1rem;
+    width: 100%;
+    background-color: #fff;
+  }
+  .header__nav-list {
+    transform: translateX(100%);
+    transition: 0.5s all linear;
+    background-color: rgb(49, 65, 109);
+    border-radius: 10px;
+    padding: 39px 15px 30px 44px;
+    position: absolute;
+    font-size: 2rem;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 20rem;
+  }
+  .header__nav-list.header__nav-list--active {
+    transform: translateX(0%);
+  }
+  .header__nav-item {
+    margin-bottom: 0.5rem;
+  }
+  .header__close {
+    display: block;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    left: 3rem;
+    z-index: 20;
+    width: 3rem;
+  }
+  .header__close:hover {    
+    transform: scale(1.2);
+    transition: all 0.3s ease;
+  }
+}
+@media (max-width: 401px){
+  .main__info-name::after{
+    display: none;
+  }
+  .footer__wrapper{
+    flex-direction: column;
+  }
+  .footer__author{
+    order: -1;
+    margin-bottom: 1rem;
+  }
+
 }
